# ebrains-downloader

./: .gitignore  README.md  pyproject.toml  run.py
ebrains_downloader/: __init__.py
