[project]
name = "ebrains-downloader"
version = "0.1.0"
description = "CLI tool to download whole-slide images from EBRAINS, filtered by diagnosis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairgraph>=0.13.3",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[project.scripts]
ebrains-downloader = "ebrains_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
